fix openapi previous schema gen and update schema with expected responses
