# books/app.py
@@ -3,7 +3,7 @@ from typing import List
 
 import toml
 import yaml
-from fastapi import Body, FastAPI
+from fastapi import Body, FastAPI, status
 from fastapi.responses import Response
 from pydantic import BaseModel
 
@@ -19,13 +19,17 @@ class Book(BaseModel):
 olmo = Author(name='Olmo Maldonado')
 books = [Book(author=olmo, title="Where the red fern grows.")]
 
-@app.get("/api/v1/books")
-async def get_books() -> List[Book]:
+@app.get("/api/v1/books", responses={
+    status.HTTP_200_OK: {'model': List[Book]},
+})
+async def get_books():
     return books
 
 
-@app.post("/api/v1/books")
-async def create_book(book: Book = Body(embed=True)) -> Book:
+@app.post("/api/v1/books", responses={
+    status.HTTP_201_CREATED: {'model': Book},
+})
+async def create_book(book: Book = Body(embed=True)):
     books.append(book)
     return book
 
